--- a/css/styles.css
+++ b/css/styles.css
@@ -1740,6 +1740,7 @@ footer .icon-container i {
   cursor: pointer;
   font-size: 1.2rem;
   z-index: 1;
+  color: red;
 }
 .tour-center .img-container{
   width: 30%;
