--- a/css/internmediate.css
+++ b/css/internmediate.css
@@ -1,210 +1,273 @@
-
 :root {
-  --main-transition: all .3s linear;
-  --lightblue: #00D3FB;
-  --darkblue: #01bbe0;
+    --main-transition: all 0.3s linear;
+    --lightblue: #00d3fb;
+    --darkblue: #01bbe0;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-  letter-spacing: 1px;
-  outline: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Lato", sans-serif;
+    letter-spacing: 1px;
+    outline: none;
 }
 
-.alert-box{
-  position: fixed;
-  top: 1rem;
-  background-color: #fff;
-  left: 40%;
-  z-index: 100;
-  width:20rem;
-  height: 13rem;
-  box-shadow: 5px 2px 20px #ccc;
-  border-radius: 1rem;
-  display: none;
-  transform: translateY(-100%);
-  transition:var(--main-transition);
-  animation:alert .5s linear;
+.alert-box {
+    position: fixed;
+    top: 1rem;
+    background-color: #fff;
+    left: 40%;
+    z-index: 100;
+    width: 20rem;
+    height: 13rem;
+    box-shadow: 5px 2px 20px #ccc;
+    border-radius: 1rem;
+    display: none;
+    transform: translateY(-100%);
+    transition: var(--main-transition);
+    animation: alert 0.5s linear;
 }
-.alert-box.show{
-  display: block;
-  transform: translateY(0%);
+.alert-box.show {
+    display: block;
+    transform: translateY(0%);
 }
-@keyframes alert{
-  0%{
-    transform: translateY(-1rem);
-  }
-  25%{
-    transform: translateY(1rem);
-  }
-  50%{
-    transform: translateY(-.5rem);
-  }
-  75%{
-    transform: translateY(.5rem);
-  }
-  90%{
-    transform: translateY(-.3rem);
-  }
-  100%{
-    transform: translateY(.1rem);
-  }
-}
-
-.icon-alert{
-  font-size: 3rem;
-  text-align: center;
-  margin-top: 1rem;
-}
-.icon-alert span{
-  display:none;
-}
-.success .success-icon{
-  display:block;
-  color: #71BE34;
- 
-}
-.success-icon i{
-  border-radius: 50%;
-  box-shadow: 0 20px 30px 50px #F2FFE1;
-}
-.error .error-icon{
-  display:block;
-  color: #FF623D;
-}
-.error-icon i{
-  border-radius: 50%;
-  box-shadow: 0 20px 30px 50px #FFE7E7;
-}
-.warning .warning-icon{
-  display:block;
-  color: #FFB703;
-}
-.warning-icon i{
-  border-radius: 50%;
-  box-shadow: 0 20px 30px 50px #FFF6E7;
+@keyframes alert {
+    0% {
+        transform: translateY(-1rem);
+    }
+    25% {
+        transform: translateY(1rem);
+    }
+    50% {
+        transform: translateY(-0.5rem);
+    }
+    75% {
+        transform: translateY(0.5rem);
+    }
+    90% {
+        transform: translateY(-0.3rem);
+    }
+    100% {
+        transform: translateY(0.1rem);
+    }
 }
 
-.type-alert{
-  text-align: center;
-  margin-top: .7rem;
-  font-size: 1.4rem;
-  font-weight: normal;
+.icon-alert {
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 1rem;
 }
-.content-alert{
-  text-align: center;
-  padding-bottom: 1rem;
-  width:80%;
-  margin:.5rem auto 0 auto;
-  border-bottom: 1px solid #eee;
-  color: gray;
+.icon-alert span {
+    display: none;
 }
-.alert-btn{
-  width:50%;
-  padding: .3rem .5rem;
-  margin: .5rem 25%;
-  cursor: pointer;
-  border-radius: 1rem;
-  border: none;
-  color: white;
-  font-size: 1.2rem;
+.success .success-icon {
+    display: block;
+    color: #71be34;
 }
-.success .alert-btn{
-  background-color: #71BE34 ;
+.success-icon i {
+    border-radius: 50%;
+    box-shadow: 0 20px 30px 50px #f2ffe1;
 }
-.error .alert-btn{
-  background-color: #FF623D ;
+.error .error-icon {
+    display: block;
+    color: #ff623d;
 }
-.warning .alert-btn{
-  background-color: #FFB703 ;
+.error-icon i {
+    border-radius: 50%;
+    box-shadow: 0 20px 30px 50px #ffe7e7;
 }
-
-
-.fas.fa-user{
-  color: var(--lightblue);
+.warning .warning-icon {
+    display: block;
+    color: #ffb703;
+}
+.warning-icon i {
+    border-radius: 50%;
+    box-shadow: 0 20px 30px 50px #fff6e7;
 }
 
-.notification-icon{
-  position: relative;
+.type-alert {
+    text-align: center;
+    margin-top: 0.7rem;
+    font-size: 1.4rem;
+    font-weight: normal;
 }
-.notification-box{
-  position: absolute;
-  top:2rem ;
-  right: -1rem;
-  z-index: 5;
-  width: 20rem;
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  padding: .5rem .5rem;
-  border-radius: .8rem;
-  box-shadow: 0 0 20px 5px #bbb;
-  visibility: hidden;
-  transform: translateY(100%);
-  transition: var(--main-transition);
+.content-alert {
+    text-align: center;
+    padding-bottom: 1rem;
+    width: 80%;
+    margin: 0.5rem auto 0 auto;
+    border-bottom: 1px solid #eee;
+    color: gray;
 }
-.notification-box.show{
-  visibility: visible;
-  transform: translateY(0%);
+.alert-btn {
+    width: 50%;
+    padding: 0.3rem 0.5rem;
+    margin: 0.5rem 25%;
+    cursor: pointer;
+    border-radius: 1rem;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+}
+.success .alert-btn {
+    background-color: #71be34;
+}
+.error .alert-btn {
+    background-color: #ff623d;
+}
+.warning .alert-btn {
+    background-color: #ffb703;
+}
+
+.fas.fa-user {
+    color: var(--lightblue);
+}
+
+.notification-icon {
+    position: relative;
+}
+.notification-box {
+    position: absolute;
+    top: 2rem;
+    right: -1rem;
+    z-index: 5;
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 0.5rem 0.5rem;
+    border-radius: 0.8rem;
+    box-shadow: 0 0 20px 5px #bbb;
+    visibility: hidden;
+    transform: translateY(100%);
+    transition: var(--main-transition);
+}
+.notification-box.show {
+    visibility: visible;
+    transform: translateY(0%);
 }
 .notification-box::after {
-  content: '\f0de';
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  position: absolute;
-  top: -.7rem;
-  right: 1rem;
-  color: #fff;
-  font-size: 1.8rem;
+    content: "\f0de";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    top: -0.7rem;
+    right: 1rem;
+    color: #fff;
+    font-size: 1.8rem;
 }
-.noti{
-  display:flex;
-  flex-direction: row;
-  margin-bottom: .8rem;
+.noti {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.8rem;
 }
-.icon-noti{
-  font-size:2rem;
-  color: #bbb;
+.icon-noti {
+    font-size: 2rem;
+    color: #bbb;
 }
-.content-noti{
-  color: rgb(95, 94, 94);
-  font-size: .9rem;
+.content-noti {
+    color: rgb(95, 94, 94);
+    font-size: 0.9rem;
 }
-.remove-noti{
-  color: rgb(95, 94, 94);
-  font-size: .9rem;
-  cursor: pointer;
+.remove-noti {
+    color: rgb(95, 94, 94);
+    font-size: 0.9rem;
+    cursor: pointer;
 }
-
-
-
+.profile-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: grid;
+    place-items: center;
+    visibility: hidden;
+    z-index: 10;
+}
+.profile-overlay.show {
+    visibility: visible;
+}
+.profile-overlay .profile-wrapper {
+    width: 50vw;
+    height: 50vh;
+    background-color: #fff;
+    border-radius: 1rem;
+    overflow: hidden;
+    transform: translateY(-100%);
+    transition: var(--main-transition);
+}
+.profile-overlay.show .profile-wrapper {
+    transform: translateY(0);
+}
+.profile-wrapper .header-profile {
+    text-align: center;
+    color: #fff;
+    background: var(--lightblue);
+    font-size: 1.8rem;
+    padding: 0.5rem 0;
+}
+.profile-wrapper .profile-content {
+    display: flex;
+    padding: 2rem;
+}
+.profile-content-left {
+    width: 30%;
+    line-height: 2.1;
+    font-size: 1.5rem;
+}
+.profile-content-right {
+    width: 70%;
+    line-height: 2;
+    font-size: 1.3rem;
+}
+.profile-footer {
+    display: flex;
+    width: 100%;
+    height: 2.5rem;
+}
+.profile-footer button {
+    width: 50%;
+    height: 100%;
+    border: none;
+    background: var(--lightblue);
+    font-weight: 900;
+    color: #fff;
+    border-left: 1px solid #fff;
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+.profile-footer button:hover {
+    background: var(--darkblue);
+}
 /* RESPONSIVE */
 
-@media  (min-width:450px) and (max-width:768px){
-  .alert-box{
-    left: 20vw;
-  }
-  .notification-box{
-    right: -3rem;
-    width:15rem;
-  }
-  .notification-box::after{
-    right: 20%;
-  }
+@media (min-width: 450px) and (max-width: 768px) {
+    .alert-box {
+        left: 20vw;
+    }
+    .notification-box {
+        right: -3rem;
+        width: 15rem;
+    }
+    .notification-box::after {
+        right: 20%;
+    }
 }
-@media only screen and (max-width:450px){
-  .alert-box{
-    left: 0vw;
-    transform:scale(.5);
-  }
-  .notification-box{
-    right: -7.5rem;
-    width:15rem;
-  }
-  .notification-box::after{
-    right: 50%;
-  }
+@media only screen and (max-width: 450px) {
+    .alert-box {
+        left: 0vw;
+        transform: scale(0.5);
+    }
+    .notification-box {
+        right: -7.5rem;
+        width: 15rem;
+    }
+    .notification-box::after {
+        right: 50%;
+    }
 }
